# cad

./: .gitignore  Cargo.toml  README.md
crates/kernel/: Cargo.toml
crates/kernel/src/: euler.rs  lib.rs  primitives.rs  tessellate.rs  topology.rs
crates/kernel/tests/: orientation.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
